--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,7 @@
-
-/* Your CSS Code here. */
+table {
+			border-collapse: collapse;
+		}
+		th, td {
+			padding: 5px;
+			border: 1px solid black;
+		}
